Adiciona mais links de redes sociais

--- a/Módulo II - HTML&CSS3/Website/index.html
+++ b/Módulo II - HTML&CSS3/Website/index.html
@@ -13,20 +13,27 @@
     </header>
     <section>
         <header>
-            <h2></h2>
+            <h2>Posts</h2>
         </header>
         <article>
             <header>
-                <h3>Artigos</h3>
+                <h3>Post 01</h3>
                 <img src="/Módulo II - HTML&CSS3/Website/assets/tech.jpg" alt="Editor de texto mostrando códigos HTML">
             </header>
             <p>Acesse o Google clicando aqui <a href="https://google.com" target="_blank">Google</a> ou acesse meu <a href="mailto:email@email.com" target="_blank">email</a></p>
         </article>
-
     </section>
     <footer>
         <ul>
-            <li><a href="https://linkedin.com/in/elaineferreiras/" target="_blank">LinkedIn</a></li>
+            <li>
+                <a href="https://linkedin.com/in/elaineferreiras/" target="_blank">LinkedIn</a>
+            </li>
+            <li>
+                <a href="https://github.com/elainefs" target="_blank">GitHub</a>
+            </li>
+            <li>
+                <a href="mailto:email@email.com" target="_blank">Email</a>
+            </li>
         </ul>
     </footer>
 </body>
